--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,22 +1,26 @@
 
 <div class="shopea">
-    <button class="letraS">S</button>
-    <h3>Shopéame!</h3>
+    <button class="letraS">S</button> 
+    <h3 class="text">Shopéame!</h3>
 </div>
     
 <div class="navegado">
 <nav class="navegador">
     <div class="img-inicio">
-        <img class="icono" src="../../../assets/Inicio.JPG" alt="inicio">
-        <a routerLink="/" routerLinkActive="router-link-active">Home</a>
+        <!-- <img class="icono" src="../../../assets/Inicio.JPG" alt="inicio"> -->
+        <button class="img-inicio">
+        <a routerLink="/" routerLinkActive="router-link-active"><img class="icono" src="../../../assets/Inicio.JPG" alt="inicio"></a>
+        </button>
     </div>
     <button class="img-inicio">
         <!-- <img class="icono" src="../../../assets/Prods.JPG" alt=""> -->
-        <a routerLink=":id" routerLinkActive="router-link-active"><img class="icono" src="../../../assets/Prods.JPG" alt=""></a>
+        <a routerLink=":id" routerLinkActive="router-link-active"><img class="icono" src="../../../assets/Prods.JPG" alt="productos"></a>
     </button>
     <div class="img-inicio">
-        <img class="icono" src="../../../assets/Gestion.JPG" alt="">   
-        <a routerLink="gestion" routerLinkActive="router-link-active">Gestion</a>
+        <!-- <img class="icono" src="../../../assets/Gestion.JPG" alt="">   -->
+        <button class="img-inicio">
+        <a routerLink="gestion" routerLinkActive="router-link-active"><img class="icono" src="../../../assets/Gestion.JPG" alt="gestion"></a>
+        </button> 
     </div>
 </nav>
 </div>
