--- a/src/app/pages/producto/producto.component.html
+++ b/src/app/pages/producto/producto.component.html
@@ -1,8 +1,9 @@
-<p>producto works!</p>
+
 <div>
     <img src="{{producto?.image}}" alt="{{producto?.name}}">
     <h4>{{producto?.name}}</h4>
     <P class="descrip">{{producto?.description}}</P>
     <h3>{{producto?.price}}</h3>
+    <!-- <p-rating [(ngModel)]="producto.stars">{{producto?.stars}}</p-rating> -->
     <button routerLink="/">Ir Atrás</button>
 </div>
