--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,6 +1,7 @@
 
 <div class="shopea">
-    <button class="letraS">S</button> 
+    <!-- <button class="letraS">S</button>  -->
+    <h3 class="letraS">S</h3>
     <h3 class="text">Shopéame!</h3>
 </div>
     
