--- a/src/app/pages/editar-producto/editar-producto.component.html
+++ b/src/app/pages/editar-producto/editar-producto.component.html
@@ -34,6 +34,6 @@
     <h3>{{editarProducto?.price}}</h3>
     <P class="descrip">{{editarProducto?.description}}</P>
     <img class="img" src="{{editarProducto?.image}}" alt="{{editarProducto?.name}}">
-    <p-rating [(ngModel)]="editarProducto.stars">{{editarProducto?.stars}}</p-rating>
+    <p-rating [(ngModel)]="editarProducto!.stars">{{editarProducto?.stars}}</p-rating>
     </div>
     </div>
